# GitFlowy

./: .gitignore  README.md  git_assistant.py  install.py  main.py  pyproject.toml
gitflowy/: __init__.py  core.py  handlers.py  main_app.py  theme.py  ui.py
