[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitflowy"
version = "0.1.0"
description = "Assistente de Commits Semânticos interativo e elegante para o terminal."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich",
    "questionary"
]

# Aqui acontece a mágica! 
# 'gflow' será o comando que o usuário vai digitar no terminal.
# 'git_assistant:main' diz para o Python procurar o arquivo git_assistant.py e rodar a função main()
[project.scripts]
gflow = "git_assistant:main"