[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitflowy"
version = "0.1.0"
description = "Assistente de Commits Semânticos interativo e elegante para o terminal."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich",
    "questionary"
]

# Aqui acontece a mágica! 
# 'gflow' será o comando que o usuário vai digitar no terminal.
[project.scripts]
gflow = "gitflowy.main_app:main"